--- a/app/views/menu-edit.html
+++ b/app/views/menu-edit.html
@@ -224,7 +224,7 @@
                    required
                    maxlength="5"
                    class="form-control"
-                   name="menuItemQuantity"
+                   name="menuItemQuantity-{{$index}}"
                    ng-model="item.itemQty"
                    placeholder="{{$index}}"
                    ng-disabled="!isMenuEditable()"/>
