--- a/app/views/store-instance-seals.html
+++ b/app/views/store-instance-seals.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <step-wizard steps="wizardSteps" save-trigger="saveAndExit()" next-trigger="nextTrigger()" prev-trigger="prevTrigger()" save-button-text="saveButtonName"></step-wizard>
+  <step-wizard ng-if="areWizardStepsInitialized" steps="wizardSteps" save-trigger="saveAndExit()" next-trigger="nextTrigger()" prev-trigger="prevTrigger()" save-button-text="saveButtonName"></step-wizard>
 
   <store-instance-header></store-instance-header>
 
