--- a/app/views/schedule-list.html
+++ b/app/views/schedule-list.html
@@ -112,7 +112,7 @@
                 <label for="departure-station">Departure Station</label>
                 <ui-select id="departure-station" multiple ng-model="multiSelectedValues.depStations" theme="bootstrap">
                   <ui-select-match placeholder="Select Stations..">{{ $item.stationCode }}</ui-select-match>
-                  <ui-select-choices repeat="station in stationList | filter: $select.search">
+                  <ui-select-choices repeat="station in stationList | filter: $select.search | orderBy: 'stationCode'">
                     {{ station.stationCode }} ({{ station.stationName }})
                   </ui-select-choices>
                 </ui-select>
