TSVPORTAL-11125 - Adding filter for user master items

--- a/app/views/menu-edit.html
+++ b/app/views/menu-edit.html
@@ -324,7 +324,7 @@
               <th>Item Code</th>
               <th></th>
             </tr>
-            <tr ng-repeat="masterItem in masterItemList | filter: {itemName: masterItemsListSearch} | filter: {isDisabled: true} | orderBy:'itemName'">
+            <tr ng-repeat="masterItem in masterItemList | filter: {itemName: masterItemsListSearch} | filter: {isDisabled: false} | orderBy:'itemName'">
               <td>{{ masterItem.itemName }}</td>
               <td>{{ masterItem.itemCode }}</td>
               <td>
