TSVPORTAL-11125 - Change item expire message

--- a/app/views/menu-edit.html
+++ b/app/views/menu-edit.html
@@ -192,7 +192,7 @@
               		</button>
             	</div>
             </div>
-            <div ng-if="menuItemList[item.menuIndex].isExpired && !isMenuViewOnly()" style="color:red">This menu item expired!</div>
+            <div ng-if="menuItemList[item.menuIndex].isExpired && !isMenuViewOnly()" style="color:red">This Item Expired</div>
             <!--<ui-select
               name="menuItem"
               required="true"
