TSVPORTAL-11124: added layout info style

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -109,6 +109,10 @@ html .navbar,
   background-color: #FFD4D4;
 }
 
+.info-row {
+  background-color: #d9edf7;
+}
+
 .gray-header {
   position:relative;
   padding:1rem;
