TSVPORTAL-11124: formatted message better

--- a/app/views/lmp-delivery-note.html
+++ b/app/views/lmp-delivery-note.html
@@ -44,14 +44,14 @@
     </div>
   </div>
 
-    <div class="panel panel-default">
-      <div class="info-row">
-        <div class="row" ng-hide="isDeliveryDateSelected() ">
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <span class="info-row">Please first select Delivery Date</span>
-          </div>
+    <div style="padding-bottom: 25px;">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <span class="alert alert-info" ><i class="fa fa-exclamation-circle"></i> Please first select Delivery Date</span>
         </div>
       </div>
+    </div>
+    <div class="panel panel-default">
 
       <div class="panel-heading">
         <div class="row">
@@ -110,7 +110,7 @@
                 label-from="Delivery Date*"
                 name-from="Delivery Date">
               </date-picker>
-              <span class="col-xs-12 col-sm-6 col-md-3 info-row form-control" style="width: auto;">Please first select Delivery Date</span>
+
             </div>
           </div>
 
