TSVPORTAL-11124: css fix

--- a/app/views/lmp-delivery-note.html
+++ b/app/views/lmp-delivery-note.html
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-    <div style="padding-bottom: 25px;" ng-hide="isDeliveryDateSelected()">
+    <div class="info-container" ng-hide="isDeliveryDateSelected()">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-4">
           <span class="alert alert-info" ><i class="fa fa-exclamation-circle"></i> Please first select Delivery Date</span>
