TSVPORTAL-7863: use of isAddPriceDisabled

--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -459,7 +459,7 @@
           <h3 id="price-and-tax">Price & Tax</h3>
 
           <div class="form-group">
-            <button id="add-price-group" ng-disabled="isDisabled()" type="button" class="btn btn-primary" ng-click="addPriceGroup()">
+            <button id="add-price-group" ng-disabled="isAddPriceDisabled()" type="button" class="btn btn-primary" ng-click="addPriceGroup()">
               <i class="fa fa-plus"></i> Add Price Type
             </button>
           </div>
