TSVPORTAL-11059 - Fix thenApply

--- a/app/views/station-create.html
+++ b/app/views/station-create.html
@@ -114,6 +114,7 @@
           ng-model="formData.startDate"
           max-date="maxStartDate">
         </date-picker-field>
+        {{maxStartDate}}
       </div>
 
       <div class="col-xs-12 col-sm-6">
