TSVPORTAL-11059 - Adding custom date picker start and end dates

--- a/app/views/station-create.html
+++ b/app/views/station-create.html
@@ -128,8 +128,9 @@
           disable-past="true"
           end-current-effective="editingItem && shouldDisableStartDate"
           required="true"
-          min-date="minEndDate">
+          custom-date="minEndDate">
         </date-picker-field>
+        {{editingItem && shouldDisableStartDate}}
       </div>
     </div>
 
