TSVPORTAL-11059 - Fix wrong closing tag

--- a/app/views/station-create.html
+++ b/app/views/station-create.html
@@ -146,7 +146,7 @@
           <select class="form-control" name="isCaterer" required="true" ng-model="formData.isCaterer" ng-options="item as item.name for item in isCatererDropdownOptions">
             <option value="">Is Catering Station?</option>
           </select>
-          <span ng-show="formData.isCaterer">This is <span ng-show="!formData.isCaterer.value">not</span> a Catering Station<span>
+          <span ng-show="formData.isCaterer">This is <span ng-show="!formData.isCaterer.value">not</span> a Catering Station</span>
 
        </fieldset>
 
