--- a/app/views/directives/input-station-exception.html
+++ b/app/views/directives/input-station-exception.html
@@ -22,7 +22,7 @@
 
           <div class="col-xs-12 col-sm-6">
             <date-picker-field ng-if="minDate" min-date="$parent.minDate"
-              disable="$parent.isDisabled()" form="form" label="Effective From"
+              disable="$parent.isAddPriceDisabled()" form="form" label="Effective From"
               name="StationExceptionEffectiveFrom" ng-model="stationException.startDate" required="true">
             </date-picker-field>
           </div>
@@ -41,7 +41,7 @@
 
 					<div class="col-xs-12 col-sm-6">
 
-						<div class="form-group" ng-disabled="$parent.isDisabled()" ng-class="{ 'has-error' : !stationException.stationId , 'has-success' : stationException.stationId }">
+						<div class="form-group" ng-disabled="$parent.isAddPriceDisabled()" ng-class="{ 'has-error' : !stationException.stationId , 'has-success' : stationException.stationId }">
 
 							<label>Station *</label>
 
@@ -56,7 +56,7 @@
 
 					<div class="col-xs-12 col-sm-6">
 
-						<div class="form-group" ng-disabled="$parent.isDisabled()" ng-class="{ 'has-error' : !stationException.taxIs , 'has-success' : stationException.taxIs }">
+						<div class="form-group" ng-disabled="$parent.isAddPriceDisabled()" ng-class="{ 'has-error' : !stationException.taxIs , 'has-success' : stationException.taxIs }">
 
 							<label>Tax Is *</label>
 
