--- a/app/views/directives/input-price-type.html
+++ b/app/views/directives/input-price-type.html
@@ -22,7 +22,7 @@
         <div class="row">
 
           <div class="col-xs-12 col-sm-6">
-            <date-picker-field ng-if="minDate" min-date="$parent.minDate" disable="$parent.isDisabled()"
+            <date-picker-field ng-if="minDate" min-date="$parent.minDate" disable="$parent.isAddPriceDisabled()"
               form="form" label="Effective From" name="PriceEffectiveFrom" ng-model="itemPrice.startDate"
               required="true">
             </date-picker-field>
@@ -31,7 +31,7 @@
           <div class="col-xs-12 col-sm-6">
             <date-picker-field ng-if="minDate" min-date="$parent.minDate"
               disable="isDisabledEndDateForm()" form="form"
-              label="Effective To" name="PriceEffectiveTo" ng-model="itemPrice.endDate" required="true" end-current-effective="$parent.isDisabled()">
+              label="Effective To" name="PriceEffectiveTo" ng-model="itemPrice.endDate" required="true" end-current-effective="$parent.isAddPriceDisabled()">
             </date-picker-field>
           </div>
 
