--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -75,8 +75,7 @@
         <div ng-show="displayCloneInfo" class="alert alert-info alert-dismissible fade in ng-hide" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span>×</span></button>
           <h4 id="oh-snap!-you-got-an-error!">
-            <strong>Note</strong>: If you update Item Code, Item Name AND POS Display Name changes will reflect in original item record, new item will not be created.
-            Changing these fields will create a new Item record if one that match these fields do not already exist.
+            <strong>Note</strong>: If you update Item Code, Item Name AND POS Display Name changes will reflect in original item record.
             <a class="anchorjs-link" href="#oh-snap!-you-got-an-error!"><span class="anchorjs-icon"></span></a>
           </h4>
         </div>
