TSVPORTAL-7863: CUrrency was disabled on item clone

--- a/app/views/directives/input-price-type.html
+++ b/app/views/directives/input-price-type.html
@@ -86,7 +86,7 @@
               {{ currency.code }} *
 						</div>
 
-						<input name="Currencies List - {{ currency.code }}" ng-model="currency.price" ng-required="$parent.shouldValidatePrice()" ng-disabled="$parent.isAddPriceDisabled() || !$parent.isItemPriceNew(itemPrice)" type="text" class="form-control" maxlength="8" placeholder="1.00"/>
+						<input name="Currencies List - {{ currency.code }}" ng-model="currency.price" ng-required="$parent.shouldValidatePrice()" ng-disabled="($parent.isAddPriceDisabled() || !$parent.isItemPriceNew(itemPrice)) && !$parent.cloningItem" type="text" class="form-control" maxlength="8" placeholder="1.00"/>
 
 					</div>
 
