TSVPORTAL-7863: miles points

--- a/app/views/directives/input-price-type.html
+++ b/app/views/directives/input-price-type.html
@@ -97,7 +97,7 @@
                 <input name="Miles Points"
                        ng-model="itemPrice.priceMilesPoints.miles_points"
                        ng-required="false"
-                       ng-disabled="(!itemPrice.startDate && !itemPrice.endDate) || $parent.isAddPriceDisabled() || !$parent.isItemPriceNew(itemPrice)"
+                       ng-disabled="((!itemPrice.startDate && !itemPrice.endDate) || $parent.isAddPriceDisabled() || !$parent.isItemPriceNew(itemPrice)) && !$parent.cloningItem"
                        maxlength="10"
                        custom-validity
                        custom-pattern="number"
