--- a/app/views/directives/input-price-type.html
+++ b/app/views/directives/input-price-type.html
@@ -22,7 +22,7 @@
         <div class="row">
 
           <div class="col-xs-12 col-sm-6">
-            <date-picker-field ng-if="minDate" min-date="$parent.minDate" disable="$parent.isAddPriceDisabled() || !$parent.isItemPriceNew(itemPrice)"
+            <date-picker-field ng-if="minDate" min-date="$parent.minDate" disable="$parent.isAddPriceDisabled() || !$parent.isItemPriceNewOrIsExitingAndValidForEdit(itemPrice)"
               form="form" label="Effective From" name="PriceEffectiveFrom" ng-model="itemPrice.startDate"
               required="true">
             </date-picker-field>
