TSVPORTAL-11135:  warning message style fied

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -32,5 +32,6 @@
 @import 'directive/error-dialog';
 @import 'directive/epos-config';
 @import 'tax-rates';
+@import 'menu-relationship';
 @import 'eula';
 @import 'reconciliation_dashboard';
