--- a/app/views/menu-relationship-create.html
+++ b/app/views/menu-relationship-create.html
@@ -125,7 +125,7 @@
               </select>
 
               <div class="row" ng-if="catererStationListIsEmpty && !areCatererStationsBeingLoaded && isStartDateSelected() && isEndDateSelected()" style="padding-left: 20px;">
-                <span class="alert alert-warning" ><i class="fa fa-exclamation-triangle"></i> There are no active Caterer stations for selected effective date range</span>
+                <span class="menu-alert-warning" ><i class="fa fa-exclamation-triangle"></i> There are no active Caterer stations for selected effective date range</span>
               </div>
             </div>
           </fieldset>
