--- a/app/styles/menu-relationship.scss
+++ b/app/styles/menu-relationship.scss
@@ -7,3 +7,13 @@
   border: 1px solid transparent;
   border-radius: 4px;
 }
+
+.menu-alert-info {
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+  color: #31708f;
+  padding: 15px;
+  margin-top: 10px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
