--- a/app/views/menu-relationship-create.html
+++ b/app/views/menu-relationship-create.html
@@ -124,6 +124,10 @@
                 <option value="{{station.id}}" ng-repeat="(key,station) in stationList">{{ station.code }}</option>
               </select>
 
+              <div class="row" ng-hide="isStartDateSelected() && isEndDateSelected()" style="padding-left: 20px;">
+                <span class="menu-alert-info" ><i class="fa fa-exclamation-triangle"></i> Please first select effective date range.</span>
+              </div>
+
               <div class="row" ng-if="catererStationListIsEmpty && !areCatererStationsBeingLoaded && isStartDateSelected() && isEndDateSelected()" style="padding-left: 20px;">
                 <span class="menu-alert-warning" ><i class="fa fa-exclamation-triangle"></i> There are no active Caterer stations for selected effective date range</span>
               </div>
